tests/fixtures/errors/e0109_on_rise_non_clock.mimz
// expect: E0109
module M {
  clock clk
  reset rst
  in x: bit
  reg v: bit = 0
  on rise(x) {
    v <- 1
  }
}
